<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:padding="10dp"
  android:orientation="vertical">

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/bluetooth_device_name"
      android:textSize="18sp"/>

    <TextView
      android:id="@+id/tv_device_name"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:textSize="18sp"/>

  </LinearLayout>

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/bluetooth_device_address"
      android:textSize="18sp"/>

    <TextView
      android:id="@+id/tv_device_address"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:textSize="18sp"/>

  </LinearLayout>

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/bluetooth_device_state"
      android:textSize="18sp"/>

    <TextView
      android:id="@+id/tv_device_state"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/bluetooth_state_disconnected"
      android:textSize="18sp"/>

  </LinearLayout>

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/bluetooth_device_data"
      android:textSize="18sp"/>

    <TextView
      android:id="@+id/tv_device_data"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:textSize="18sp"/>

  </LinearLayout>

  <ExpandableListView
    android:id="@+id/elv_gatt_services"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:scrollbars="none"/>

</LinearLayout>